--- a/index.html
+++ b/index.html
@@ -2,14 +2,24 @@
 <html>
   <head>
     <title>Marcus's Website</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
-    <div>
-      <nav></nav>
+    <div id="all-contents">
+      <!-- All content goes here -->
+      <nav>
+        <h1>Marcus's Website</h1>
+        <ul id="nav-ul">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+        </ul>
+      </nav>
       <main>
         <!-- Sidebar section -->
-        <div></div>
+        <div>
+          <img src="images/w11" />
+        </div>
 
         <!-- Content section -->
         <div>
