--- a/index.html
+++ b/index.html
@@ -6,17 +6,18 @@
   </head>
 
   <body>
-    <div id="all-contents">
       <!-- All content goes here -->
+      <div id="all-contents">
       <nav>
         <h1>Marcus's Website</h1>
         <ul id="nav-ul">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a class = "nav-ul" ></a href="index.html">Home</a></li>
+          <li> <a class = "nav-ul" ></a href="portfolio.html">Portfolio</a></li>
         </ul>
       </nav>
       <main>
         <!-- Sidebar section -->
+        <div></div>
         <div>
           <img src="images/w11" />
         </div>
@@ -32,8 +33,7 @@
               <li>Video games</li>
               <li>RC Cars</li>
               <li>Compters</li>
-            </ul>
-          </div>
+              </ul>
         </div>
       </main>
     </div>
