--- a/index.html
+++ b/index.html
@@ -4,38 +4,38 @@
     <title>Marcus's Website</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-
   <body>
-      <!-- All content goes here -->
-      <div id="all-contents">
-      <nav>
-        <h1>Marcus's Website</h1>
-        <ul id="nav-ul">
-          <li><a class = "nav-ul" ></a href="index.html">Home</a></li>
-          <li> <a class = "nav-ul" ></a href="portfolio.html">Portfolio</a></li>
-        </ul>
-      </nav>
-      <main>
-        <!-- Sidebar section -->
-        <div></div>
+    <!-- All content goes here -->
+    <div id="all-contents">
+      <div class="sidebar">
+    </div>
+    <nav>
+      <h1>Marcus's Website</h1>
+      <ul id="nav-ul">
+        <li class="nav-li"><a href="index.html">Home</a></li>
+        <li class="nav-li"><a href="portfolio.html">Portfolio</a></li>
+      </ul>
+    </nav>
+    <main>
+      <!-- Sidebar section -->
+      <div class="sidebar">
         <div>
-          <img src="images/w11" />
+          <img src="images/w11">
         </div>
-
-        <!-- Content section -->
-        <div>
-          <h2>Marcus Cuillier</h2>
-          <p>Student at Northshore</p>
+      <!-- Content section -->
+      <div>
+        <h2>Marcus Cuillier</h2>
+        <p>Student at Northshore</p>
           <!-- Interests section -->
-          <div>
+          <div id="interests">
             <h3>Interests</h3>
             <ul>
-              <li>Video games</li>
-              <li>RC Cars</li>
-              <li>Compters</li>
-              </ul>
+                <li>Video games</li>
+                <li>RC Cars</li>
+                <li>Compters</li>
+            </ul>
         </div>
-      </main>
-    </div>
+      </div>
+    </main>
   </body>
 </html>
