--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Marcus's Website</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
@@ -11,8 +11,8 @@
       <nav>
         <h1>Marcus's Website</h1>
         <ul id="nav-ul">
-          <li><a class = "nav-ul" ></a href="index.html">Home</a></li>
-          <li> <a class = "nav-ul" ></a href="portfolio.html">Portfolio</a></li>
+          <li class = "nav-li" ><a href="index.html">Home</a></li>
+          <li class = "nav-li" ><a href="portfolio.html">Portfolio</a></li>
         </ul>
       </nav>
       <main>
