--- a/index.html
+++ b/index.html
@@ -2,13 +2,11 @@
 <html>
   <head>
     <title>Marcus's Website</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <!-- All content goes here -->
     <div id="all-contents">
-      <div class="sidebar">
-    </div>
     <nav>
       <h1>Marcus's Website</h1>
       <ul id="nav-ul">
