--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Marcus's Website</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
@@ -11,25 +11,55 @@
       <nav>
         <h1>Marcus's Website</h1>
         <ul id="nav-ul">
-          <li class = "nav-li" ><a href="index.html">Home</a></li>
-          <li class = "nav-li" ><a href="portfolio.html">Portfolio</a></li>
+          <li class="nav-li"><a href="index.html">Home</a></li>
+          <li class="nav-li"><a href="portfolio.html">Portfolio</a></li>
         </ul>
       </nav>
       <main>
-        <div class = "content">
+        <div class="content">
           <h1>Opspark Portfolio</h1>
-          <ul id = "portfolio">
-            <li><a href="projects/platformer/">Platformer : A cannon - dodging, collectible - grabbing adventure game for Halleb0t</a></li>
-            <li><a href="projects/bouncing-box/">Bouncing Box : A project that gives you a taste of game development on the web </a></li>
-            <li><a href="projects/circularity/">Circularity : A motion poem using random number generation and velocity applied to circle shapes...</a></li>   
-            </ul>
-            <h1>Khan Academy Portfolio</h1>
-            <ul id = "portfolio">
-              <li><a href="https://www.khanacademy.org/computer-programming/spin-off-of-project-whats-for-dinner/4572676918525952">What's For Dinner</a></li>
-              <li><a href="https://www.khanacademy.org/computer-programming/spin-off-of-project-shooting-star/5074247002537984">Shooting Star</a></li>
-              <li><a href="https://www.khanacademy.org/computer-programming/spin-off-of-project-animal-attack/5735179806490624">Aniaml Attack</a></li>
-              <li><a href="">Ad Design</a></li>
-            </ul>
+          <ul id="portfolio">
+            <li>
+              <a href="projects/platformer/"
+                >Platformer : A cannon - dodging, collectible - grabbing
+                adventure game for Halleb0t</a
+              >
+            </li>
+            <li>
+              <a href="projects/bouncing-box/"
+                >Bouncing Box : A project that gives you a taste of game
+                development on the web
+              </a>
+            </li>
+            <li>
+              <a href="projects/circularity/"
+                >Circularity : A motion poem using random number generation and
+                velocity applied to circle shapes...</a
+              >
+            </li>
+          </ul>
+          <h1>Khan Academy Portfolio</h1>
+          <ul id="portfolio">
+            <li>
+              <a
+                href="https://www.khanacademy.org/computer-programming/spin-off-of-project-whats-for-dinner/4572676918525952"
+                >What's For Dinner</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://www.khanacademy.org/computer-programming/spin-off-of-project-shooting-star/5074247002537984"
+                >Shooting Star</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://www.khanacademy.org/computer-programming/spin-off-of-project-animal-attack/5735179806490624"
+                >Aniaml Attack</a
+              >
+            </li>
+            <li><a href="">Ad Design</a></li>
+          </ul>
         </div>
       </main>
     </div>
