--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <!-- Sidebar section -->
       <div class="sidebar">
         <div>
-          <img src="images/w11">
+          <img class = "sidebar-img" src="images/pfp.jpg">
         </div>
       <!-- Content section -->
       <div>
