--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <img class = "sidebar-img" src="images/pfp.jpg">
         </div>
       <!-- Content section -->
-      <div>
+      <div id="content">
         <h2>Marcus Cuillier</h2>
         <p>Student at Northshore</p>
           <!-- Interests section -->
