--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
             <li>
               <a
                 href="https://www.khanacademy.org/computer-programming/spin-off-of-project-animal-attack/5735179806490624"
-                >Aniaml Attack</a
+                >Animal Attack</a
               >
             </li>
             <li><a href="">Ad Design</a></li>
