--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
     <main>
       <!-- Sidebar section -->
       <div class="sidebar">
-        <div>
           <img class = "sidebar-img" src="images/pfp.jpg">
         </div>
       <!-- Content section -->
-      <div id="contents">
+      <div id="content">
         <h2>Marcus Cuillier</h2>
         <p>Student at Northshore</p>
           <!-- Interests section -->
@@ -34,6 +33,7 @@
             </ul>
         </div>
       </div>
-    </main>
-  </body>
+     </main>
+    </body>
+  </div>
 </html>
