--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,9 @@
                 >Animal Attack</a
               >
             </li>
-            <li><a href="">Ad Design</a></li>
+            <li><a href="https://www.khanacademy.org/computer-programming/spin-off-of-project-ad-design/6059867944435712"
+                >Ad Design</a>
+            </li>
           </ul>
         </div>
       </main>
