Halloween project add

--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Marcus's Website</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
@@ -58,8 +58,18 @@
                 >Animal Attack</a
               >
             </li>
-            <li><a href="https://www.khanacademy.org/computer-programming/spin-off-of-project-ad-design/6059867944435712"
-                >Ad Design</a>
+            <li>
+              <a
+                href="https://www.khanacademy.org/computer-programming/spin-off-of-project-ad-design/6059867944435712"
+                >Ad Design</a
+              >
+            </li>
+
+            <li>
+              <a
+                href="https://www.khanacademy.org/computer-programming/halloween-project/5743187645087744"
+                >Halloween Project</a
+              >
             </li>
           </ul>
         </div>
