--- a/portfolio.html
+++ b/portfolio.html
@@ -70,6 +70,12 @@
                 href="https://www.khanacademy.org/computer-programming/halloween-project/5743187645087744"
                 >Halloween Project</a
               >
+              <li>
+                <a
+                herf="https://www.khanacademy.org/computer-programming/spin-off-of-project-fish-tank/4971906059911168"
+                >Fish Tank Project</a
+              >
+              </li>
             </li>
           </ul>
         </div>
