--- a/portfolio.html
+++ b/portfolio.html
@@ -70,9 +70,10 @@
                 href="https://www.khanacademy.org/computer-programming/halloween-project/5743187645087744"
                 >Halloween Project</a
               >
-              <li>
-                <a
-                herf="https://www.khanacademy.org/computer-programming/spin-off-of-project-fish-tank/4971906059911168"
+            </li>
+            <li>
+              <a
+                href="https://www.khanacademy.org/computer-programming/spin-off-of-project-fish-tank/4971906059911168"
                 >Fish Tank Project</a
               >
               </li>
