--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -17,7 +17,7 @@
 			position: absolute;
 			top: 100px;
 			/* Change me! */
-			left: 0px;
+			left: 300px;
 		}
 
 		.board {
@@ -75,6 +75,7 @@
 			turn it around! 
 			*/
 			function update() {
+				moveBoxTo(300);
 
 
 			};
