--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -66,7 +66,9 @@
 			//////////////////////////////////////////////////////////////////
 
 			// TODO 2 - Variable declarations 
-
+			var positionX = 0;
+			var points = 0;
+			var speed = 10;
 
 
 			/* 
@@ -76,6 +78,11 @@
 			*/
 			function update() {
 				moveBoxTo(300);
+				moveBoxTo(positionX);
+				positionX = positionX + speed;
+				if(positionX > boardWidth){
+					speed *= -1;
+				}
 
 
 			};
@@ -86,7 +93,10 @@
 			the left side of the screen.
 			*/
 			function handleBoxClick() {
-
+				positionX = 0;
+				points++;
+				changeBoxText(points);
+				speed += 3;
 
 			};
 
