--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -77,10 +77,13 @@
 			turn it around! 
 			*/
 			function update() {
-				moveBoxTo(300);
+				//Increases positionX by 10
 				moveBoxTo(positionX);
 				positionX = positionX + speed;
-				if(positionX > boardWidth){
+				if(positionX > boardWidth - 60){
+					speed *= -1;
+				}
+				if(positionX < 0){
 					speed *= -1;
 				}
 
@@ -93,10 +96,14 @@
 			the left side of the screen.
 			*/
 			function handleBoxClick() {
-				positionX = 0;
-				points++;
-				changeBoxText(points);
-				speed += 3;
+				positionX = 0; //reset box to 0
+				points++; //increase points
+				changeBoxText(points); //keep points
+				if(speed > 0){
+					speed += 3;
+				} else if(speed < 0){
+					speed -= 3;
+				}
 
 			};
 
