--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <ul>
                 <li>Video games</li>
                 <li>RC Cars</li>
-                <li>Compters</li>
+                <li>Computers</li>
             </ul>
         </div>
       </div>
