--- a/portfolio.html
+++ b/portfolio.html
@@ -37,6 +37,9 @@
                 velocity applied to circle shapes...</a
               >
             </li>
+            <li>
+              <a href="projects/runtime">Runtime: A side-scrolling game featuring Hallebot!</a>
+            </li>
           </ul>
           <h1>Khan Academy Portfolio</h1>
           <ul id="portfolio">
